Revision history for Spreadsheet-HTML

0.20

0.19
    - added pinhead attr to produce sensible rotations
    - -rowX and -colX accepts array ref to
        allow subs and hashes (no longer either/or)
    - layout is now a method

0.18
    - added north(), east(), west() and south()
    - deprecated transpose, flip, mirror, reverse, earthquake and tsunami
    - renamed -row_X and -col_X to -rowX and -colX
    - added theta and flip arguments
    - all front end generating methods call generate() now
    - refactored _args() to allow any named args

0.17
    - -col_X works as it should with matrix now
    - fixed EXPORT issues (using EXPORT_OK now)
    - more consistent file parsing error handling
    - added support for .xlsx extensions

0.16
    - fixed broken test

0.15
    - very close to feature complete (BETA)
    - implemented row and column configuration
    - implemented support for colgroup and col tags
    - implemented support for caption tag

0.14
    - now using HTML::AutoTag to generate HTML

0.13
    - replaced file loading modules with Spreadsheet::HTML::File::Loader
    - fixed 'layout' (was overriding client values)

0.12
    - added 'tgroup' attribute (new tags!)
    - added 'layout' attribute

0.11
    - added 'empty' attribute
    - added 'headings' attribute
    - added XLS loading

0.10
    - using HTML::Element in process now()
    - caching working
    - lots of refactoring
    - fixed more "breaks the dist" tests

0.09
    - fixed manifest (left out test data dir)
    - finished Spreadsheet:HTML::CSV

0.08
    - added flip and mirror
    - added data caching
    - using Clone to prevent data from being clobbered
    - major refactor of internals (interface unchanged)
    - more modular and flexible

0.07
    - added matrix attr (plain headings)
    - added portrait and landscape aliases
    - encode attr correctly accepts undef now
      (allows HTML::Element to encode all unsafe chars)

0.06    
    - using HTML::Element